--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,57 @@
     <title><%= content_for(:title) || "Internship Test Questions" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= yield :head %>
-
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container">
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <%= image_tag "logo" %>
+        <% end %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "Home", root_path, class: "nav-link#{" active" if request.path == root_path}", "aria-current": "page" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Results", results_path, class: "nav-link#{" active" if request.path == results_path}" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Account", edit_user_registration_path, class: "nav-link#{" active" if request.path == edit_user_registration_path}" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Logout", destroy_user_session_path, class: "nav-link", data: {confirm: "Are you sure?", turbo_confirm: "Are you sure?", turbo_method: :delete}, method: :delete %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "Log in", new_session_path(resource_name), class: "nav-link#{" active" if request.path == new_session_path(resource_name)}", "aria-current": "page" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Sign up", new_registration_path(resource_name), class: "nav-link#{" active" if request.path == new_registration_path(resource_name)}" %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
