--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center mt-4">
+<div class="d-flex justify-content-center">
   <div class="w-100" style="max-width: 575px;">
     <h2 class="text-center">Change your password</h2>
 
