--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
       <div class="container">
         <%= link_to root_path, class: "navbar-brand" do %>
           <%= image_tag "logo" %>
@@ -29,16 +29,7 @@
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to "Home", root_path, class: "nav-link#{" active" if request.path == root_path}", "aria-current": "page" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Results", results_path, class: "nav-link#{" active" if request.path == results_path}" %>
-              </li>
-              <li class="nav-item">
                 <%= link_to "Account", edit_user_registration_path, class: "nav-link#{" active" if request.path == edit_user_registration_path}" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Logout", destroy_user_session_path, class: "nav-link", data: {confirm: "Are you sure?", turbo_confirm: "Are you sure?", turbo_method: :delete}, method: :delete %>
               </li>
             <% else %>
               <li class="nav-item">
@@ -52,7 +43,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container" style="margin-top: 99px">
       <%= yield %>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
